--- a/style.css
+++ b/style.css
@@ -8,14 +8,17 @@ image and dimensions */
 section {
 width: 100%;
 height: 100vh;
-background:
-url(
-'https://media.geeksforgeeks.org/wp-content/uploads/20210408155049/gfg9.png'
-);
-background-size: cover;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 30px;
 }
 /* Styling the left floating section */
-section .leftBox {
+section .left-Box {
 width: 50%;
 height: 100%;
 float: left;
