--- a/style.css
+++ b/style.css
@@ -1,52 +1,25 @@
 body {
-  background:lightblue
+  background:lightblue;
+  padding: 30px;
 }
 
 .header-title {
   font-weight: bold;
   font-size: 30px;
+  margin-top: 25px;
+  margin-bottom: 25px;
 }
 
-.search {
-    
+.btn {
+  margin-bottom: 25px;
 }
 
-button.main-submit {
-    color: black;
-    background-color: lightgray;
-    border-color: lightgray;
-}
-
-.right-box {
-  width: 100px;
+.content  {
   float: right;
-}
-
-#city {
-
-}
-
-.card-event {
-
-}
-
-.left-box {
-    width: 100px;
-    float: left;
-}
-
-.five-day {
-
-}
-
-.card-weather {
-    
 }
 
 footer {
     color: darkgrey;
     text-align: center;
 }
-
-
 
